--- a/cxaro.tex
+++ b/cxaro.tex
@@ -15,7 +15,7 @@
 
 			\vspace{2.75cm}
 
-			\includegraphics[width=0.6\linewidth]{malgranda_biciklo.eps}
+			\includegraphics[width=0.6\linewidth]{malgranda_biciklo.eps} % http://openclipart.org/detail/177214/kid-bike-by-ribbla-177214
 
 			\vspace{1.75cm}
 
